--- a/styles/app.css
+++ b/styles/app.css
@@ -178,3 +178,13 @@ body {
   display: inline-block;
   margin-top: 30px;
 }
+
+#side-bar ul.nav li a{
+  position: relative;
+}
+
+#side-bar ul.nav li a span.delete-notebook {
+  position: absolute;
+  right: 10px;
+  cursor: pointer;
+}
